# actix_todos

./: .env  Cargo.toml  compose.yml  readme.md  state.json
javascript/: main.js
migrations/2023-10-28-130036_create_to_do_items/: up.sql
scripts/: wait_for_db.sh
src/: database.rs  main.rs  schema.rs
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/models/item/: item.rs
src/views/to_do/: mod.rs
