[package]
name = "actix_todos"
version = "0.1.0"
authors = ["Lewis Sneddon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.5"
serde = "1"
actix-service = "1.0.6"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.31"
dotenv = "0.15.0"
