[package]
name = "actix_todos"
version = "0.1.0"
authors = ["Lewis Sneddon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"]}
futures = "0.3.5"
actix-service = "1.0.6"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
